<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Antoine PURNELLE
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Who Brings What</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="not_now">Not now</string>

    <string name="from">from</string>
    <string name="to">to</string>

    <string name="name">Name</string>
    <string name="name_event">Name of the event</string>
    <string name="name_contribution">Name of the contribution</string>
    <string name="start_time">Start Time</string>
    <string name="end_time_optional">End Time (optional)</string>
    <string name="description_optional">Description (optional)</string>
    <string name="location">Location</string>
    <string name="servings">Servings</string>
    <string name="servings_optional">Servings (optional)</string>
    <string name="budget_optional">Budget (optional)</string>
    <string name="budget">Budget</string>
    <string name="courses">Courses</string>

    <string name="contributor">Contributor</string>
    <string name="quantity_optional">Quantity (optional)</string>
    <string name="quantity">Quantity</string>
    <string name="unit_optional">Unit (optional)</string>
    <string name="course">Course</string>
    <string name="comment_optional">Comment (optional)</string>
    <string name="drink">Drink</string>

    <string name="create_contribution">Create contribution</string>
    <string name="save_contribution">Save contribution</string>
    <string name="edit_contribution">Edit Contribution</string>
    <string name="new_contribution">New Contribution</string>

    <string name="create_event">Create event</string>
    <string name="save_event">Save event</string>
    <string name="event_created">Event created</string>
    <string name="event_saved">Event saved</string>
    <string name="contribution_created">Contribution created</string>
    <string name="contribution_saved">Contribution saved</string>
    <string name="new_event">New Event</string>
    <string name="event_edit">Event Edit</string>
    <string name="edit_event">Edit Event</string>
    <string name="leave_event">Leave Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_contribution">Delete Contribution</string>

    <string name="appetizer">Appetizer</string>
    <string name="starter">Starter</string>
    <string name="main">Main</string>
    <string name="dessert">Dessert</string>

    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>

    <string name="add_contribution">Add contribution</string>

    <string-array name="courses_array">
        <item>@string/appetizer</item>
        <item>@string/starter</item>
        <item>@string/main</item>
        <item>@string/dessert</item>
    </string-array>

    <string name="no_contribution_here_yet">No contribution here yet</string>

    <string name="are_you_sure_delete_event">Are you sure you want to delete the event \"%s\"?\nEverybody who had access to this event (including you) will loose visibility on it.\nThis action is irreversible!</string>
    <string name="are_you_sure_delete_contribution">Are you sure you want to delete this contribution?\nEverybody who had access to this event (including you) will loose visibility on it.\nThis action is irreversible!</string>

    <string name="are_you_sure_leave">Are you sure you want to leave the event \"%s\"?\nYou will no longer see this event in your list but you can regain access to it using the sharing link</string>

    <string name="please_fill_non_optional">Please fill all the non-optional fields</string>
    <string name="please_enter_valid_servings">Please enter a valid number of servings</string>
    <string name="enddate_cannot_be_before_startdate">End date cannot be before start date</string>
    <string name="an_error_occurred">An error occurred. Please try again</string>

    <string name="login_error_dialog_message">An error occurred while trying to log you in. Please try again</string>
    <string name="login_error_dialog_title">Login error</string>
    <string name="login_dialog_title">Log in to Who Brings What</string>
    <string name="login_dialog_message">By logging in, you ensure to save the list of events you participate to. You will be able to find them whenever you log in to Who Brings What</string>
    <string name="widget_events_list_empty_message">No upcoming event to display. Open the app and press the + button to create a new one</string>
    <string name="events_list_empty_message">No event to display. Press the + button to create a new one</string>
    <string name="events_list_empty_message_not_logged_in">No event to display. Log in or press the + button to create a new one</string>
    <string name="contribution_type_food">Food contribution</string>
    <string name="contribution_type_drink">Drink contribution</string>
    <string name="start_end_times">Start and end times</string>
    <string name="appwidget_text">Upcoming events</string>
    <string name="add_widget">Add widget</string>
</resources>
